--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,7 @@
 @import "custom";
 @import "~bootstrap/scss/bootstrap";
 
-body {
-    background-color: rgb(255, 255, 255);
-}
+body{
+background-color: aliceblue;
+Font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif
+;}
