--- a/templates/creation_course/creationCourse.html.twig
+++ b/templates/creation_course/creationCourse.html.twig
@@ -1,19 +1,8 @@
-
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TestController!{% endblock %}
-
-{% block javascript %}
-<script>
-    $(document).ready(function() {
-        $('.js-datepicker').datepicker({
-            format: 'yyyy-mm-dd'
-        });
-    });
-</script>
-{% endblock %}
-
+{# début du bloc body #}
 {% block body %}
+
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <input class = "btn btn-primary" type="submit"/>
