--- a/templates/liste_course/listeCourse.html.twig
+++ b/templates/liste_course/listeCourse.html.twig
@@ -2,7 +2,7 @@
 
 {# début du bloc body #}
 {% block body %}
-<div id='liste-course' data-user="{{ app.user|serialize(format = 'json') }}">
+<div id='liste-course' data-user="{{ app.user.id|json_encode() }}">
     {# L'appli Vue.js vivra ici #}
 </div>
 
