--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,12 +33,12 @@
         </li>
       </ul>
     </div>
-    <form class="d-flex">
+   {# <form class="d-flex">
         <button class="btn btn-primary"  type="button">Connexion</button>
       </form>
       <form class="d-flex">
         <button class="btn btn-primary" type="button">Déconnexion</button>
-      </form>
+     </form> #}
   </div>
 </nav>
 
