resultat courses vueJs

--- a/templates/liste_course/coursesOrganisateur.html.twig
+++ b/templates/liste_course/coursesOrganisateur.html.twig
@@ -2,7 +2,7 @@
 
 {# début du bloc body #}
 {% block body %}
-<div id='historique-course' data="{{ idCourse }}" data-user="{{ app.user.id|json_encode() }}">
+<div id='result-course' data="{{ idCourse }}" data-user="{{ app.user.id|json_encode() }}">
     {# L'appli Vue.js vivra ici #}
 </div>
 
