--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
         </ul>
       </div>
       <form class="d-flex">
-        <button class="btn btn-primary" type="button">Connexion</button>
+        <button class="btn btn-primary" type="button" href="/" >Connexion</button>
       </form>
       <form class="d-flex">
         <button class="btn btn-primary" type="button">Déconnexion</button>
