--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,9 +27,16 @@
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Courses
             </a>
-            <div id="lescourses" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <div id="lescourses" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
               <a labelledby="lescourses" class="dropdown-item" href="/courses/listes">A venir</a>
-              <a labelledby="lescourses" class="dropdown-item" href="/courses/organisees">Organisées</a>
+              {% if app.user %}
+                {% if app.user.estOrganisateur %}
+                  <a labelledby="lescourses" class="dropdown-item" href="/creation/courses">Création</a>
+                  <a labelledby="lescourses" class="dropdown-item" href="/courses/organisees">Organisées</a>
+                {% else %}
+                  <div labelledby="lescourses" id="bouton-courses" data="Résultats"></div>
+                {% endif %}
+              {% endif %}
             </div>
           </li>
           </div>
@@ -43,19 +50,19 @@
             </a>
             <div id="leprofil" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a labelledby="leprofil" class="dropdown-item" href="/home">Mon Profil</a>
-              <div labelledby="leprofil" id="bouton-courses" data="Mes Résultats de Courses">
-              </div>
-              </div>
+            </div>
           </li>
           </div>  
         </ul>
       </div>
       <div class="d-flex" style="margin-right:30px; margin-top:20px">
+      {% if app.user %}
         {% if app.user.estOrganisateur %}
           <p style="color: white">Compte Organisateur</p>
         {% else %}
           <p style="color: white">Compte Coureur</p>
         {% endif %}
+      {% endif %}
       </div>
       {% if app.user == null %}
       <div class="d-flex">
