--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,12 +28,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/courses/listes">Courses</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/courses/listes"> Mon Panier</a>
+</li>
           <li class="nav-item-dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Mon Compte
-            </a>
+            </a>      
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/">Mon Profil</a>
+              <a class="dropdown-item" href="/profil">Mon Profil</a>
               <div id="bouton-courses" data="Mes Résultats de Courses">
               </div>
               </div>
