date course organisee

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
             Mon Compte
             </a>
             <div id="leprofil" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a labelledby="leprofil" class="dropdown-item" href="/home">Mon Profil</a>
+              <a labelledby="leprofil" class="dropdown-item" href="/profil">Mon Profil</a>
             </div>
           </li>
           </div>  
