--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,6 +70,11 @@
           <button class="btn btn-primary" type="button">Connexion</button>
         </a>
       </div>
+      <div class="d-flex">
+        <a href="/register">
+          <button class="btn btn-primary" type="button">S'inscrire</button>
+        </a>
+      </div>
       {% else %}
       <div class="d-flex">
         <a href="/logout">
